Fix z-index on-load-animation bug

--- a/src/views/AppView/PlayView/MyIdeasView/MyIdeasView.scss
+++ b/src/views/AppView/PlayView/MyIdeasView/MyIdeasView.scss
@@ -18,6 +18,7 @@
     width: fit-content;
   }
   .TracksView__recordings {
+    @include on-load-animation(slide-down);
     @include v-stack-c;
     width: 100%;
     gap: calc($gap-xxl * 1.5);
@@ -30,9 +31,6 @@
     }
     @include desktop-large-up {
       grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
-    .MyIdeasView__recordings__recording {
-      @include on-load-animation(slide-down);
     }
   }
 }
